--- a/views/css/style.css
+++ b/views/css/style.css
@@ -31,6 +31,8 @@ form {
 
 .mover {
   position: fixed;
+  /*will-change: transform;*/
+  backface-visibility: hidden;
   width: 256px;
   z-index: -1;
 }
