--- a/views/pizza.html
+++ b/views/pizza.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
@@ -32,8 +32,8 @@
           </div>
         </div>
       </div>
-      <div id="movingPizzas1" class="col-md-6">
-      </div>
+    </div>
+    <div id="movingPizzas1" class="col-md-6">
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
@@ -138,7 +138,7 @@
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
-  <script type="text/javascript" src="js/main.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
