--- a/views/pizza.html
+++ b/views/pizza.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <div id="movingPizzas1" class="col-md-6">
+    <div id="movingPizzas1">
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
